# curator-opensearch

./: .dockerignore  .gitignore  Dockerfile  binary_release.py  docker-compose.yaml  pyproject.toml  run_curator.py  run_es_repo_mgr.py  run_singleton.py  setup.py  win_release.py
.github/workflows/: main.yaml  pullrequest.yaml  release.yaml  schedule.yaml
curator/: __init__.py  _version.py  actions.py  cli.py  config_utils.py  curator_cli.py  exceptions.py  indexlist.py  logtools.py  repomgrcli.py  singletons.py  snapshotlist.py  utils.py
curator/cli_singletons/: alias.py  allocation.py  close.py  delete.py  forcemerge.py  freeze.py  object_class.py  open_indices.py  replicas.py  restore.py  rollover.py  show.py  shrink.py  snapshot.py  unfreeze.py  utils.py
curator/defaults/: client_defaults.py  filter_elements.py  filtertypes.py  option_defaults.py  settings.py
curator/validators/: actions.py  config_file.py  filters.py  options.py  schemacheck.py
docs/: conf.py
helm/: Chart.yaml
test/: run_tests.py
test/integration/: __init__.py  test_alias.py  test_allocation.py  test_cli.py  test_close.py  test_clusterrouting.py  test_count_pattern.py  test_create_index.py  test_datemath.py  test_delete_indices.py  test_delete_snapshots.py  test_envvars.py  test_es_repo_mgr.py  test_forcemerge.py  test_freeze.py  test_integrations.py  test_open.py  test_reindex.py  test_replicas.py  test_restore.py  test_rollover.py  test_shrink.py  test_snapshot.py  test_unfreeze.py  testvars.py
test/unit/: __init__.py  test_action_alias.py  test_action_allocation.py  test_action_close.py  test_action_clusterrouting.py  test_action_create_index.py  test_action_delete_indices.py  test_action_open.py  (+15 more)
(+1 files in other folders)
